Implementa CDUs 51 a 54 do diagnostico